fix button collapse right note

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -70,3 +70,8 @@ span.select2-container {
     background: linear-gradient(left, #fff, #e4e4e4);
     border: 1px solid #aaa;
 }
+
+.col-left-note{
+    border-left: 1px solid #aaa;
+    min-height: calc(100vh - 90px);
+}
